tests/testfiles/passing/invalid_identifiers/keyword_as_id_goto.c
/* Keyword as identifier: goto */
int main() {
    int goto;
}